--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,11 @@ layout: default
 ---
 
 <div class="row">
-    <div class="col-4 ">
+    <div class="col-md-4 col-xs-12">
     <div class="image-container">
       <img src="assets/images/me.jpg" class="rounded-circle" alt="Me!!" height="200" />
     </div>
+
     <br>
     <ul style="list-style-type:none;">
     <li><i class="fa-solid fa-location-dot"></i> Edinburgh, UK</li>
@@ -17,7 +18,7 @@ layout: default
     </ul>
   </div>
 
-  <div class="col-8">
+  <div class="col-md-8 col-xs-12">
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading py-3">{{ page.title }}</h1>
