--- a/_layouts/details.html
+++ b/_layouts/details.html
@@ -16,7 +16,7 @@ layout: post
     <a href={{ page.entry.url }}>link</a>
   {% endif %}
   {% if page.entry.pdf %}
-    <object data="{{ site.url }}{{ site.baseurl }}/assets/pdfs/{{ page.entry.pdf }}" width="1000" height="1000" type='application/pdf'></object>
+    <object data="{{ site.url }}{{ site.baseurl }}/assets/pdfs/{{ page.entry.pdf }}" width="100%" height="1000" type='application/pdf'></object>
   {% endif %}
 
 </body>
