--- a/_sass/_custom-styles.scss
+++ b/_sass/_custom-styles.scss
@@ -13,6 +13,20 @@ $btn-color: $light;
     }
 }
 
+iframe {
+  border: none;
+  margin: 0;
+  padding: 0;
+  display:block; /* Add this */
+}
+
+
+flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+
 btn-primary {
     &.basic {
         @include button-variant($btn-background, $btn-border, $btn-color);
